--- a/env_vars.env
+++ b/env_vars.env
@@ -10,3 +10,4 @@ MY_DATA_DML_FILE=wishlist_dml.sql
 MY_DATA_DDL_FILE=wishlist_ddl.sql
 MY_UTIL_FUNCTIONS_FILE=util_functions.sql
 MY_UTIL_YBTSERVER_METRICS_FILE=util_ybtserver_metrics.sql
+MY_UTIL_SECURITY=util_security.sql
